# pynapple

./: .buildinfo  .gitignore  .mlc.external.json  .mlc.relative.json  404.html  AUTHORS.rst  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DATETIME64_INTEGRATION_PLAN.md  HISTORY.rst  LICENSE  Makefile  NewIO.ipynb  POSIX_TIME_INTEGRATION_PLAN.md  README.html  README.md  README.rst  about.html  api.html  citing.html  draft_pynapple_fastplotlib.py  environment.yml  examples.html  external.html  genindex.html  index.html  installing.html  main.py  main2.py  mkdocs.yml  objects.inv  py-modindex.html  pynajax.html  pyproject.toml  releases.html  requirements.txt  requirements_dev.txt  (+16 more)
.doctrees/: README.doctree  about.doctree  api.doctree  citing.doctree  environment.pickle  examples.doctree  external.doctree  index.doctree  installing.doctree  pynajax.doctree  releases.doctree  user_guide.doctree
.doctrees/examples/: tutorial_HD_dataset.doctree  tutorial_calcium_imaging.doctree  tutorial_human_dataset.doctree  tutorial_ibl_choice_decoding.doctree  tutorial_null_distributions.doctree  tutorial_phase_preferences.doctree  tutorial_pynapple_dandi.doctree  tutorial_wavelet_decomposition.doctree
.doctrees/user_guide/: 01_introduction_to_pynapple.doctree  02_input_output.doctree  03_core_methods.doctree  03_interacting_with_numpy.doctree  03_metadata.doctree  04_core_methods.doctree  05_correlograms.doctree  05_correlograms_isi.doctree  06_tuning_curves.doctree  07_decoding.doctree  08_perievent.doctree  09_randomization.doctree  10_power_spectral_density.doctree  11_wavelets.doctree  12_filtering.doctree  13_warping.doctree
.github/: CODEOWNERS
.github/workflows/: deploy.yml  documentation.yml  main.yml  test_sphinx_build.yml
AUTHORS/: index.html
CONTRIBUTING/: index.html
HISTORY/: index.html
_modules/: index.html
_sources/: README.md.txt  api.rst.txt  citing.md.txt  examples.md.txt  external.md.txt  index.rst.txt  pynajax.md.txt  releases.md.txt  user_guide.md.txt
_sources/examples/: tutorial_HD_dataset.md.txt  tutorial_human_dataset.md.txt  tutorial_ibl_choice_decoding.md.txt  tutorial_phase_preferences.md.txt  tutorial_pynapple_dandi.md.txt  tutorial_wavelet_decomposition.md.txt
_sources/user_guide/: 02_input_output.md.txt  03_core_methods.md.txt  03_interacting_with_numpy.md.txt  03_metadata.md.txt  05_correlograms.md.txt  05_correlograms_isi.md.txt  06_tuning_curves.md.txt  07_decoding.md.txt  08_perievent.md.txt  09_randomization.md.txt  10_power_spectral_density.md.txt  11_wavelets.md.txt  12_filtering.md.txt  13_warping.md.txt
_static/: copybutton.js  documentation_options.js
data/A2929-200711/: A2929-200711.clu.1  A2929-200711.clu.2  A2929-200711.evt.py.rip  A2929-200711.nrs  A2929-200711.res.1  A2929-200711.res.2  A2929-200711.xml  Epoch_TS.csv
doc/: about.md  api.rst  citing.md  conf.py  examples.md  external.md  index.rst  installing.md  releases.md  tutorial.rst  user_guide.md  user_guide.rst
doc/_static/: custom.css
doc/_templates/: layout.html  version.html
doc/examples/: GALLERY_HEADER.rst  tutorial_HD_dataset.ipynb  tutorial_HD_dataset.md  tutorial_HD_dataset.py  tutorial_calcium_imaging.md  tutorial_human_dataset.md  tutorial_human_dataset.py  tutorial_ibl_choice_decoding.md  tutorial_null_distributions.md  tutorial_null_distributions.py  tutorial_phase_preferences.md  tutorial_pynapple_dandi.ipynb  tutorial_pynapple_dandi.md  tutorial_pynapple_dandi.py  tutorial_pynapple_quick_start.py  tutorial_ripple_detection.md  tutorial_wavelet_decomposition.ipynb  tutorial_wavelet_decomposition.md
doc/tutorials/: GALLERY_HEADER.rst
doc/user_guide/: 01_introduction_to_pynapple.md  02_input_output.md  03_metadata.md  (+19 more)
docs/: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  Makefile  conf.py  external.md  extra.css  gallery_conf.py  gen_ref_pages.py  index.md  installation.md  interval_set.md  io.files.md  io.phy.md  io.suite2p.md  make.bat  process.decoding.md  process.perievent.md  process.peristimulus.md  pynacollada.md  pynajax.md  pynapple-core-notebook.ipynb  quickstart.md  ts_group.md  usage.rst
examples/: tutorial_HD_dataset.html  tutorial_calcium_imaging.html  tutorial_human_dataset.html  tutorial_ibl_choice_decoding.html  tutorial_null_distributions.html  tutorial_phase_preferences.html  tutorial_pynapple_dandi.html  tutorial_wavelet_decomposition.html
installation/: index.html
pynajax/: index.html
pynapple/: __init__.py
quickstart/: index.html
reference/: index.html
scripts/: check_markdown_links.sh  check_parameter_naming.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: __init__.py  helper_tests.py  mock.py  test_abstract_tsd.py  test_call_invocation.py  test_cnmfe.py  test_config.py  test_correlograms.py  test_decode_general.py  test_decoding.py  test_decoding_old.py  test_filtering.py  test_folder.py  test_interface_neo.py  test_interface_neurosuite.py  test_interval_set.py  test_jax_backend.py  test_jitted.py  test_lazy_loading.py  test_metadata.py  test_misc.py  test_neo.py  test_neuropixel.py  test_neurosuite.py  test_non_numpy_array.py  test_npz_file.py  test_numpy_compatibility.py  test_nwb.py  test_peri_stimulus.py  test_perievent.py  test_phy.py  test_power_spectral_density.py  test_pynapple.py  test_randomize.py  test_repr.py  test_signal.py  test_signal_processing.py  test_spike_trigger_average.py  test_suite2p.py  test_test.py  (+13 more)
tutorials/: main1_basics.py  main2_neuroseries.py  main2_pynapple.py  main3_tuningcurves.py  main4_raw_data.py  main5_autocorr.py  main5_matlab_data.py  main6_autocorr.py  main7_replay.py  tutorial_pynapple_core.py  tutorial_pynapple_quick_start.py
user_guide/: 01_introduction_to_pynapple.html  02_input_output.html  03_core_methods.html  03_interacting_with_numpy.html  03_metadata.html  04_core_methods.html  05_correlograms.html  05_correlograms_isi.html  06_tuning_curves.html  07_decoding.html  08_perievent.html  09_randomization.html  10_power_spectral_density.html  11_wavelets.html  12_filtering.html  13_warping.html
(+222 files in other folders)
