[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynapple"
version = "0.3.4"
description = "PYthon Neural Analysis Package Pour Laboratoires d’Excellence"
readme = "README.md"
authors = [{ name = "Guillaume Viejo", email = "guillaume.viejo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
keywords = ["neuroscience"]
dependencies = [
    "pandas>=1.0.3",
    "numpy>=1.17.4",
    "scipy>=1.3.2",
    "numba>=0.46.0",
    "pynwb",
    "tabulate",
    "h5py",
    "tifffile",
    "zarr",
    "rich",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["pynapple", "pynapple.*"]

[project.optional-dependencies]
dev = [
  "black",  
  "isort", 
  "pip-tools", 
  "pytest",
  "flake8",  
  "coverage"
  ]

[project.urls]
homepage = "https://github.com/pynapple-org/pynapple"
documentation = "https://pynapple-org.github.io/pynapple/"
repository = "https://github.com/pynapple-org/pynapple"

##########################################################################
# Optional dependencies
##########################################################################

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39']
skip-string-normalization = false
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.md
    | \.toml
    | \.cfg
    | \.txt
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = [    
    "pynapple/io/loader_gui.py",
    "pynapple/io/ephys_gui.py",
    "pynapple/io/ophys_gui.py",
    "pynapple/core/jitted_functions.py" # coverage doesn't work with numba
]