[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynapple"
version = "0.4.0"
description = "PYthon Neural Analysis Package Pour Laboratoires d’Excellence"
readme = "README.md"
authors = [{ name = "Guillaume Viejo", email = "guillaume.viejo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
keywords = ["neuroscience"]
dependencies = [
    "pandas>1.0.3",
    "numpy>=1.17.4",
    "scipy>=1.3.2",
    "numba>=0.46.0",
    "pynwb>=2.0.0",
    "tabulate",
    "h5py",
    "tifffile",
    "zarr",
    "rich"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["pynapple", "pynapple.*"]

[project.urls]
homepage = "https://github.com/pynapple-org/pynapple"
documentation = "https://pynapple-org.github.io/pynapple/"
repository = "https://github.com/pynapple-org/pynapple"

##########################################################################
# Optional dependencies
##########################################################################
[project.optional-dependencies]
dev = [
    "black",                        # Code formatter
    "isort",                        # Import sorter
    "pip-tools",                    # Dependency management
    "pytest",                       # Testing framework
    "flake8",                       # Code linter
    "coverage",                     # Test coverage measurement
]
docs = [
    "mkdocs",                       # Documentation generator
    "mkdocstrings[python]",         # Python-specific plugin for mkdocs
    "mkdocs-section-index",         # Plugin for generating a section index in mkdocs
    "mkdocs-gen-files",             # Plugin for generating additional files in mkdocs
    "mkdocs-literate-nav",          # Plugin for literate-style navigation in mkdocs
    "mkdocs-gallery",               # Plugin for adding image galleries to mkdocs
    "mkdocs-material",
    "matplotlib",
    "seaborn",
]
dandi = [
    "dandi",                        # Dandi package
    "fsspec",
    "requests",
    "aiohttp",
]

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39']
skip-string-normalization = false
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.md
    | \.toml
    | \.cfg
    | \.txt
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = [    
    "pynapple/io/loader_gui.py",
    "pynapple/io/ephys_gui.py",
    "pynapple/io/ophys_gui.py",
    "pynapple/io/cnmfe.py",
    "pynapple/io/neurosuite.py",
    "pynapple/io/phy.py",
    "pynapple/io/suite2p.py",
    "pynapple/core/jitted_functions.py" # coverage doesn't work with numba
]