[build-system]
requires      = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pynapple"
dynamic = ["version"]
description = "PYthon Neural Analysis Package Pour Laboratoires d’Excellence"
readme = "README.md"
authors = [{ name = "Guillaume Viejo", email = "guillaume.viejo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]
keywords = ["neuroscience"]
dependencies = [
    "pandas>1.0.3",
    "numpy>=1.17.4",
    "scipy>=1.3.2",
    "numba>=0.46.0",
    "pynwb>=2.0.0",
    "tabulate",
    "h5py",
    "rich"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["pynapple", "pynapple.*"]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
local_scheme = 'no-local-version'

[project.urls]
homepage = "http://pynapple.org/"
documentation = "http://pynapple.org/"
repository = "https://github.com/pynapple-org/pynapple"

##########################################################################
# Optional dependencies
##########################################################################
[project.optional-dependencies]
jax = [
    "pynajax"
]
dev = [
    "black>=24.2.0",                # Code formatter
    "isort",                        # Import sorter
    "pip-tools",                    # Dependency management
    "pytest",                       # Testing framework
    "flake8",                       # Code linter
    "Flake8-pyproject",             # So that flake8 can be configured in this file
    "coverage",                     # Test coverage measurement
]
doc = [
    "matplotlib",
    "zarr",
    "seaborn",
    "tqdm",
    "numpydoc",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-issues",
    "sphinxcontrib-apidoc",
    "myst-parser",
    "myst-nb",
    "dandi",
    "sphinx-autobuild",
    "sphinx-contributors",
    "scikit-learn",
    # "sphinx-excec-code"
]
#docs = [
#    "mkdocs",                       # Documentation generator
#    "mkdocstrings[python]",         # Python-specific plugin for mkdocs
#    "mkdocs-section-index",         # Plugin for generating a section index in mkdocs
#    "mkdocs-gen-files",             # Plugin for generating additional files in mkdocs
#    "mkdocs-literate-nav",          # Plugin for literate-style navigation in mkdocs
#    "mkdocs-gallery",               # Plugin for adding image galleries to mkdocs
#    "mkdocs-material",
#    "matplotlib",
#    "seaborn",
#    "zarr",
#    "dandi"
#]
dandi = [
    "dandi",                        # Dandi package
    "fsspec",
    "requests",
    "aiohttp",
]



[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39']
skip-string-normalization = false
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.md
    | \.toml
    | \.cfg
    | \.txt
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | examples
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = [    
    "pynapple/io/cnmfe.py",
    "pynapple/io/neurosuite.py",
    "pynapple/io/phy.py",
    "pynapple/io/suite2p.py",
    "pynapple/core/_jitted_functions.py" # coverage doesn't work with numba
]

[tool.flake8]
ignore = ["E203", "E501", "W293", "E231", "W503", "C901", "W291", "E266"]
max-complexity = 10
exclude = ["doc", "__init__.py", "tests"]
